src/templating/snapshots/yolk__templating__parser__test__blanklines_around_tag-2.snap
---
source: src/templating/parser.rs
expression: "parse_document(&mut new_input(\"a\\n\\n{%if a%}\\n{%end%}\\n\\na\"))"
---
Ok(
    [
        Plain(
            [0..3]"a\n\n",
        ),
        Conditional {
            blocks: [
                Block {
                    tagged_line: TaggedLine {
                        left: "",
                        tag: "{%if a%}",
                        right: "\n",
                        full_line: [3..12]"{%if a%}\n",
                    },
                    expr: [5..9]"a",
                    body: [],
                },
            ],
            else_block: None,
            end: TaggedLine {
                left: "",
                tag: "{%end%}",
                right: "\n",
                full_line: [12..20]"{%end%}\n",
            },
        },
        Plain(
            [20..22]"\na",
        ),
    ],
)
