src/templating/snapshots/yolk__templating__parser__test__blanklines_around_tag.snap
---
source: src/templating/parser.rs
expression: "parse_document(&mut new_input(\"a\\n\\n{%a%}\\n{%end%}\\n\\na\"))"
---
Ok(
    [
        Plain(
            [0..3]"a\n\n",
        ),
        MultiLine {
            block: Block {
                tagged_line: TaggedLine {
                    left: "",
                    tag: "{%a%}",
                    right: "\n",
                    full_line: [3..9]"{%a%}\n",
                },
                expr: [5..6]"a",
                body: [],
            },
            end: TaggedLine {
                left: "",
                tag: "{%end%}",
                right: "\n",
                full_line: [9..17]"{%end%}\n",
            },
        },
        Plain(
            [17..19]"\na",
        ),
    ],
)
