src/templating/snapshots/yolk__templating__parser__test__error_empty_tag.snap
---
source: src/templating/parser.rs
expression: "render_error(parse_document(\"{%%}\").unwrap_err())"
---
  × Failed to parse yolk template file
  ╰─▶   × Expected an expression in this tag
         ╭─[file:1:3]
       1 │ {%%}
         ·   ▲
         ·   ╰── expression
         ╰────
