src/templating/snapshots/yolk__templating__parser__test__error_incomplete_multiline.snap
---
source: src/templating/parser.rs
expression: "render_error(parse_document(\"{%f%}\").unwrap_err())"
---
  × Failed to parse yolk template file

Error: 
  × Expected a line after this tag
   ╭─[file:1:6]
 1 │ {%f%}
   ╰────
