src/templating/snapshots/yolk__templating__parser__test__error_multiline_with_else.snap
---
source: src/templating/parser.rs
expression: "render_error(parse_document(\"{%f%}\\n{%else%}\\n{%end%}\").unwrap_err())"
---
  × Failed to parse yolk template file
  ╰─▶   × Expected block to end here
         ╭─[file:2:1]
       1 │ {%f%}
       2 │ {%else%}
         · ▲
         · ╰── block end
       3 │ {%end%}
         ╰────
        help: Did you forget an `{% end %}` tag?
