src/templating/snapshots/yolk__templating__parser__test__inline_conditional_tag-2.snap
---
source: src/templating/parser.rs
expression: "p_inline_element.parse(new_input(\"foo /* {< iftest >} */\"))"
---
Ok(
    Inline {
        line: TaggedLine {
            left: "foo /* ",
            tag: "{< iftest >}",
            right: " */",
            full_line: [0..22]"foo /* {< iftest >} */",
        },
        expr: Transform(
            [10..17]"iftest ",
        ),
    },
)
