src/templating/snapshots/yolk__templating__parser__test__inline_conditional_tag.snap
---
source: src/templating/parser.rs
expression: "p_inline_element.parse(new_input(\"foo /* {< if test >} */\"))"
---
Ok(
    Inline {
        line: TaggedLine {
            left: "foo /* ",
            tag: "{< if test >}",
            right: " */",
            full_line: [0..23]"foo /* {< if test >} */",
        },
        expr: If(
            [10..18]"test ",
        ),
    },
)
