src/templating/snapshots/yolk__templating__parser__test__inline_tag.snap
---
source: src/templating/parser.rs
expression: "p_inline_element.parse(new_input(\"foo /* {< test >} */\"))"
---
Ok(
    Inline {
        line: TaggedLine {
            left: "foo /* ",
            tag: "{< test >}",
            right: " */",
            full_line: [0..20]"foo /* {< test >} */",
        },
        expr: Transform(
            [10..15]"test ",
        ),
    },
)
